--- a/index.html
+++ b/index.html
@@ -17,90 +17,46 @@
 </head>
 
 <body>
-<!--  Resume shall include:
-  1. Contact Details
-      a. Github Profile
-      b. Email/phone/address
-      c. Google Developer Contact
-  2. Statement of Purpose
-      a. To design practical, pleasing, purposeful front end experiences with zest!
-  2a. List of Projects
-      a. Online Resume
-      b. Hope in the Valley
-      c. Open Source Contributions
-      d. Pointless
-  3. List of Languages
-      a. Javascript
-      b. HTML
-      c. CSS
-      d. Java
-  4. List of Skills
-      a. Client-guided design consulting
-      b. CAD
-      c. Leadership
-  5. Personal Attributes/Career Overview
-  6. Education
-  7. Employment history/volunteering
-  8. References
-  9. Additional Information
--->
 
 <div class="resume-header">
   <div class="resume-header-title">
     Kevin A. Fischer
   </div>
-  <div class="resume-header-subtitle">
-    <a href="mailto:fischk5@hotmail.com">fischk5@hotmail.com</a>
-  </div>
   <hr>
-  <div class="resume-purpose">
-  I am a retired civil engineer with experience in municipal consulting.  I'm changing careers to pursue
-  my passion for web development.  I am interested in designing practical, purposeful,
-  and pleasing front-end experiences with avidity!
+  <div class="resume-container">
+    <img id="resume-picture" src="pictures/build/1341982670925.jpg" alt="Kevin Fischer">
+    <div class="resume-purpose">
+    I am a retired civil engineer with experience in municipal consulting.  I'm changing careers to pursue
+    my passion for web development.  I am interested in designing practical, purposeful,
+    and pleasing front-end experiences with avidity!
+    </div>
   </div>
   <hr>
 </div>
 
 <div class="resume-container">
-  <section id="resume-projects" class="resume-section">
-    Relevant Projects
-    <hr>
+  <section id="resume-projects">
+    <span class="section-title">| Projects |</span>
   </section>
 
-  <section id="resume-picture" class="resume-section">
-    <img src="pictures/1341982670925.jpg" alt="Kevin Fischer">
-    <h4>
-      I like to fish, spend time with family, and learn as much as I can about everything around me.
-    </h4>
+  <section id="resume-work">
+    <span class="section-title">| Work |</span>
   </section>
 
-  <section id="resume-work" class="resume-section">
-    <hr>
-    Work
-    <hr>
+  <section id="resume-education">
+    <span class="section-title">| Education |</span>
   </section>
 
-  <section id="resume-skillz" class="resume-section">
-    <hr>
-    Skills
-    <hr>
+  <section id="resume-skillz">
+    <span class="section-title">| Skills |</span>
   </section>
 
-  <section id="resume-education" class="resume-section">
-    <hr>
-    Education
-    <hr>
+  <section id="resume-contact">
+    <span class="section-title">| References |</span>
   </section>
 
-  <section id="resume-contact" class="resume-section">
-    <hr>
-    References
-    <hr>
-  </section>
+
 </div>
-
-
-
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
