--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+  <meta charset="utf-8" />"
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Importing a Google Font -->
@@ -19,9 +20,9 @@
 <body>
 
 <div class="resume-header">
-  <div class="resume-header-title">
-    Kevin A. Fischer
-  </div>
+      <div class="resume-header-title">
+        Kevin A. Fischer
+      </div>
   <hr>
   <div class="resume-container">
     <img id="resume-picture" src="pictures/build/1341982670925.jpg" alt="Kevin Fischer">
@@ -52,7 +53,10 @@
   </section>
 
   <section id="resume-contact">
-    <span class="section-title">| References |</span>
+    <span class="section-title">| Reference |</span>
+    <ul class="reference-items">
+      <li>Robert Bean, P.E.    -    (612) 756-3184</li>
+    </ul>
   </section>
 
 
