Add meta information

--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-  <meta charset="utf-8" />"
-
-  <title>Kevin Fischer's Resume</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Summary of Kevin Fischer">
+  <meta name="author" content="Kevin Fischer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <title>Kevin Fischer</title>
 </head>
 
 <body>
 
 </body>
-
-
 </html>
