--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   <meta name="author" content="Kevin Fischer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kevin Fischer</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+
+  <!-- Load jquery v3.2.1 -->
+  <script src="js/jquery-3.2.1.js"></script>
+
+  <!-- Load Angular framework v1.6.4 -->
+  <script src="js/angular.min.js"></script>
+
+  <!-- Load custom application JS -->
+  <script src="js/app.js"></script>
 </body>
 </html>
