Initialize app.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Summary of Kevin Fischer">
   <meta name="author" content="Kevin Fischer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kevin Fischer</title>
+  <title>Kevin Fischer - The Person Behind The Code</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
