Hook up angular controller and module to html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-ng-app="application">
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Summary of Kevin Fischer">
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body data-ng-controller="MainController">
 
 
   <!-- Load jquery v3.2.1 -->
