--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <footer>
     <h4 class="text-center">Work with me?</h4>
     <ul class="flex-list">
-      <li ng-repeat="item in footerData"><a ng-href="{{item.source}}" target="{{item.target}}">{{item.description}}</a></li>
+      <li ng-repeat="item in footerData" class="flex-even-space text-center"><a ng-href="{{item.source}}" target="{{item.target}}">{{item.description}}</a></li>
     </ul>
   </footer>
 
