Update mobile style

--- a/index.html
+++ b/index.html
@@ -19,34 +19,35 @@
         <li ng-repeat="title in sectionTitles" class="flex-even-space">{{title}}</li>
       </ul>
     </h4>
-
   </header>
 
-  <section ng-repeat="section in sectionData">
-    <h2>{{section.sectionTitle}}</h2>
-    <hr class="hr-underline">
-    <picture>
-      <source media="(min-width: 800px)" srcset="{{section.imageLarge}}">
-      <source media="(min-width: 300px)" srcset="{{section.imageMedium}}">
-      <source media="(min-width: 200px)" srcset="{{section.imageSmall}}">
-      <img src="{{section.imageLarge}}">
-    </picture>
-    <p ng-repeat="paragraph in section.sectionParagraphs">{{paragraph}}</p>
-    <!-- If sectionList exists this html will trigger -->
-    <p>{{section.sectionList.listTitle}}</p>
-    <!-- If listAdvanced exists this html will trigger -->
-    <ul>
-      <li ng-repeat="item in section.sectionList.listAdvanced" class="list-bulletless"><div><a ng-href="{{item.itemSource}}">{{item.itemName}}</a></div><div>{{item.itemDescription}}</div></li>
-    </ul>
-    <!-- If listSimple exists this html will trigger -->
-    <ul class="list-bulletless">
-      <li ng-repeat="item in section.sectionList.listSimple" class="italics">{{item}}</li>
-    </ul>
-    <hr>
-  </section>
+  <div class="section-wrapper">
+    <section ng-repeat="section in sectionData">
+      <h2>{{section.sectionTitle}}</h2>
+      <hr class="hr-underline">
+      <picture>
+        <source media="(min-width: 800px)" srcset="{{section.imageLarge}}">
+        <source media="(min-width: 300px)" srcset="{{section.imageMedium}}">
+        <source media="(min-width: 200px)" srcset="{{section.imageSmall}}">
+        <img src="{{section.imageLarge}}">
+      </picture>
+      <p ng-repeat="paragraph in section.sectionParagraphs">{{paragraph}}</p>
+      <!-- If sectionList exists this html will trigger -->
+      <p>{{section.sectionList.listTitle}}</p>
+      <!-- If listAdvanced exists this html will trigger -->
+      <ul>
+        <li ng-repeat="item in section.sectionList.listAdvanced" class="list-bulletless"><div><a ng-href="{{item.itemSource}}">{{item.itemName}}</a></div><div class="italics">{{item.itemDescription}}</div></li>
+      </ul>
+      <!-- If listSimple exists this html will trigger -->
+      <ul class="list-bulletless">
+        <li ng-repeat="item in section.sectionList.listSimple" class="italics">{{item}}</li>
+      </ul>
+      <hr>
+    </section>
+  </div>
 
   <footer>
-    <h4 class="text-center">Work with me?</h4>
+    <h5 class="text-center">Work with me</h5>
     <ul class="flex-list">
       <li ng-repeat="item in footerData" class="flex-even-space text-center"><a ng-href="{{item.source}}" target="{{item.target}}">{{item.description}}</a></li>
     </ul>
