--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="author" content="Kevin Fischer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kevin Fischer - The Person Behind The Code</title>
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
