--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kevin Fischer - The Person Behind The Code</title>
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+  <!-- Load Angular framework v1.6.4 -->
+  <script src="js/angular.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -50,15 +52,9 @@
   <footer>
     <h5 class="text-center">Work with me</h5>
     <ul class="flex-list">
-      <li ng-repeat="item in footerData" class="flex-even-space text-center"><a ng-href="{{item.source}}" target="{{item.target}}">{{item.description}}</a></li>
+      <li ng-repeat="item in footerData" class="flex-even-space text-center"><a ng-href="{{item.source}}" target={{item.target}}>{{item.description}}</a></li>
     </ul>
   </footer>
-
-  <!-- Load jquery v3.2.1 -->
-  <script src="js/jquery-3.2.1.js"></script>
-
-  <!-- Load Angular framework v1.6.4 -->
-  <script src="js/angular.min.js"></script>
 
   <!-- Load custom application JS -->
   <script src="js/app.js"></script>
