--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
       <p>{{section.sectionList.listTitle}}</p>
       <!-- If listAdvanced exists this html will trigger -->
       <ul>
-        <li ng-repeat="item in section.sectionList.listAdvanced" class="list-bulletless"><div><a ng-href="{{item.itemSource}}">{{item.itemName}}</a></div><div class="italics">{{item.itemDescription}}</div></li>
+        <li ng-repeat="item in section.sectionList.listAdvanced" class="list-bulletless">
+          <div>
+            <strong>{{item.itemName}}</strong>
+          </div>
+          <div class="italics">
+            {{item.itemDescription}}
+          </div>
+          <div>
+            <a ng-href="{{item.itemSource}}">See On GitHub</a>
+          </div>
+        </li>
       </ul>
       <!-- If listSimple exists this html will trigger -->
       <ul class="list-bulletless">
