Update style and wording

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <div class="italics">
             {{item.itemDescription}}
           </div>
-          <div>
-            <a ng-href="{{item.itemSource}}">See On GitHub</a>
+          <div class="github-link">
+            <a ng-href="{{item.itemSource}}">See Project On GitHub</a>
           </div>
         </li>
       </ul>
