Update styles and wording

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </div>
 
   <footer>
-    <h5 class="text-center">Work with me</h5>
+    <h5 class="text-center">More From Me</h5>
     <ul class="flex-list">
       <li ng-repeat="item in footerData" class="flex-even-space text-center"><a ng-href="{{item.source}}" target={{item.target}}>{{item.description}}</a></li>
     </ul>
